# OptionTrader

./: .env.example  .gitignore  .npmrc  .pre-commit-config.yaml  ASSUMPTIONS.md  CLAUDE.md  DEVELOPMENT_PLAN.md  EXTERNAL_DATA_INTERFACE_PLAN.md  LLM_SOP_FLOWCHARTS.html  Makefile  PROJECT_PLAN.md  QQQ_INTRADAY_VOL_TRADING_SYSTEM_DESIGN.md  TASKS.md  package-lock.json  package.json
.github/workflows/: ci.yml
apps/web/: index.html  package.json  vite.config.ts
apps/web/src/: App.tsx  Cockpit.test.tsx  Cockpit.tsx  ExecutionPanel.test.tsx  ExecutionPanel.tsx  ReviewPage.test.tsx  ReviewPage.tsx  SettingsPage.test.tsx  SettingsPage.tsx  cockpitState.test.ts  cockpitState.ts  execution.test.ts  execution.ts  executionTestFixture.ts  health.ts  main.tsx  review.ts  snapshot.ts  (+2 more)
data/events/: README.md
data/llm_eval/: phase4_adversarial.json
data/replay/: README.md
docs/: BROKER_ADAPTERS.md  LOGGING.md  RUNBOOK.md
docs/adr/: 0001-phase2-realtime-transport.md  0002-phase3-semi-automated-execution.md  0003-phase4-llm-advisory-boundary.md  0004-risk-grpc-module-boundaries.md  0005-phase4-automated-review-coordination.md
infra/compose/: docker-compose.yml
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_phase3_execution_durability.py  0003_execution_projection_guards.py  0004_broker_fact_ledger.py  0005_transactional_outbox.py  0006_phase4_llm_review.py  0007_phase4_automation_coordination.py
scripts/: gen_contracts.sh  gen_python_grpc.sh
services/application-api/: alembic.ini  pyproject.toml
services/application-api/app/: main.py
services/application-api/app/events/: __init__.py  cli.py  context.py  models.py  store.py
services/application-api/app/features/: __init__.py  options.py  underlying.py
services/application-api/app/ibkr_sidecar/: __init__.py  config.py  mapping.py  native.py  server.py  service.py
services/application-api/app/ingestion/: __init__.py  manifest.py  standardize.py  thetadata.py
services/application-api/app/llm/: __init__.py  automation.py  automation_context.py  automation_repository.py  config.py  coordinator.py  eval_cli.py  evaluation.py  market_calendar.py  models.py  prompt.py  provider.py  security.py  service.py
services/application-api/app/persistence/: __init__.py  repository.py  serialize.py  tables.py
services/application-api/app/realtime/: __init__.py  client.py  projector.py  session.py
services/application-api/app/regime/: __init__.py  engine.py
services/application-api/app/replay/: __init__.py  clock.py  reproducibility.py
services/application-api/app/strategy/: __init__.py  engine.py
services/application-api/app/thetadata_sdk/: __init__.py  server.py  service.py
services/application-api/app/trading/: __init__.py  candidate.py  capability.py  grpc_client.py  models.py  reconciliation.py  thetadata_options.py
services/application-api/app/vol/: __init__.py  engine.py
services/application-api/tests/: __init__.py  conftest.py  event_support.py  test_broker_contract.py  test_broker_reconciliation.py  test_candidate_plan.py  test_event_context.py  test_features.py  test_fullday_smoke.py  test_health.py  test_ibkr_sidecar.py  test_ingestion_standardize.py  test_integration_smoke.py  test_llm_api.py  test_llm_automation.py  test_llm_coordination.py  test_llm_evaluation.py  test_llm_live.py  test_llm_provider.py  test_llm_service.py  test_persistence.py  test_projector_fullday_smoke.py  test_proxy.py  test_realtime_projector.py  test_realtime_session.py  test_realtime_ws.py  test_regime.py  test_replay_clock.py  test_replay_reproducibility.py  test_strategy.py  test_thetadata_adapter.py  test_thetadata_sdk_live.py  test_thetadata_sdk_service.py  test_trading_api.py  test_vol.py
services/application-api/tests/fixtures/events/2026-07-20/: macro_events.json  qqq_holdings.json  qqq_top20_earnings.json  qqq_top20_news_events.json
services/trading-core/: Cargo.toml
services/trading-core/crates/broker/: Cargo.toml
services/trading-core/crates/broker/src/: lib.rs  longbridge.rs  pricing.rs  sequential.rs
services/trading-core/crates/execution/: Cargo.toml
services/trading-core/crates/execution/src/: lib.rs
services/trading-core/crates/market-core/: Cargo.toml
services/trading-core/crates/market-core/src/: features.rs  health.rs  lib.rs  model.rs  replay.rs  theta.rs
services/trading-core/crates/proto/: Cargo.toml  build.rs
services/trading-core/crates/proto/src/: lib.rs
services/trading-core/crates/risk-gateway/: Cargo.toml
services/trading-core/crates/risk-gateway/src/: lib.rs
services/trading-core/crates/trading-core-bin/: Cargo.toml
services/trading-core/crates/trading-core-bin/fixtures/: replay_qqq_sample.ndjson
services/trading-core/crates/trading-core-bin/src/: broker_registry.rs  grpc.rs  main.rs  option_registry.rs  risk_grpc.rs  theta_live.rs
services/trading-core/crates/trading-core-bin/src/risk_grpc/: backend.rs  candidate.rs  confirmation.rs  mapping.rs  orders.rs  reconciliation.rs  tests.rs
tests/contract/: test_jsonschema.py
