[project]
name = "application-api"
version = "0.0.0"
description = "OptionTrader Python Application Service (FastAPI): SOP orchestration, Regime/Vol/Strategy, events, replay, research, LLM, Web API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "httpx>=0.27",
    "alembic>=1.13",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "pandas>=2.2",
    "pyarrow>=16.0",
    "grpcio>=1.66",
    "protobuf>=5.27",
    "thetadata>=1.0.9",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.5",
    "mypy>=1.10",
    "jsonschema>=4.22",
    "referencing>=0.35",
    "grpcio-tools>=1.66",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["app/grpc_gen"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["app/grpc_gen"]

[[tool.mypy.overrides]]
# Generated gRPC stubs are not type-checked (regenerated, not hand-maintained).
module = "app.grpc_gen.*"
ignore_errors = true
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
