[package]
name = "trading-core-bin"
version.workspace = true
edition.workspace = true

[[bin]]
name = "trading-core"
path = "src/main.rs"

[dependencies]
market-core = { path = "../market-core" }
risk-gateway = { path = "../risk-gateway" }
execution = { path = "../execution" }
broker = { path = "../broker" }
optiontrader-proto = { path = "../proto" }
tokio.workspace = true
tokio-stream.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tonic.workspace = true
prost.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
rust_decimal.workspace = true
sha2.workspace = true
uuid.workspace = true
